{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 210,
  "lineage": "f10d867b-3f66-4089-1c32-07dbd984d4f2",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074916853051:network-acl/acl-013afdfd24a348491",
            "default_network_acl_id": "acl-013afdfd24a348491",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-013afdfd24a348491",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "074916853051",
            "subnet_ids": [
              "subnet-00e4e5056d1e16b9e",
              "subnet-015b4745f4c1321f4",
              "subnet-0ce9afd629314f733",
              "subnet-0f93879e1c88ea59a"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc-default",
              "Terraform": "true",
              "project": "youtube-DE"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc-default",
              "Terraform": "true",
              "project": "youtube-DE"
            },
            "vpc_id": "vpc-006b1d55247396fec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074916853051:route-table/rtb-0564ae0e07efc27c1",
            "default_route_table_id": "rtb-0564ae0e07efc27c1",
            "id": "rtb-0564ae0e07efc27c1",
            "owner_id": "074916853051",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc-default",
              "Terraform": "true",
              "project": "youtube-DE"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc-default",
              "Terraform": "true",
              "project": "youtube-DE"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-006b1d55247396fec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074916853051:security-group/sg-095526dd2191afd0c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-095526dd2191afd0c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "074916853051",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc-default",
              "Terraform": "true",
              "project": "youtube-DE"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc-default",
              "Terraform": "true",
              "project": "youtube-DE"
            },
            "vpc_id": "vpc-006b1d55247396fec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074916853051:internet-gateway/igw-02bd002eb57567c28",
            "id": "igw-02bd002eb57567c28",
            "owner_id": "074916853051",
            "tags": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc",
              "Terraform": "true",
              "project": "youtube-DE"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc",
              "Terraform": "true",
              "project": "youtube-DE"
            },
            "vpc_id": "vpc-006b1d55247396fec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02bd002eb57567c28",
            "id": "r-rtb-0054fe2591a3b72bb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0054fe2591a3b72bb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074916853051:route-table/rtb-0987276a78d19bca7",
            "id": "rtb-0987276a78d19bca7",
            "owner_id": "074916853051",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc-private-us-east-1a",
              "Terraform": "true",
              "project": "youtube-DE"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc-private-us-east-1a",
              "Terraform": "true",
              "project": "youtube-DE"
            },
            "timeouts": null,
            "vpc_id": "vpc-006b1d55247396fec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074916853051:route-table/rtb-0513568e4e076a57f",
            "id": "rtb-0513568e4e076a57f",
            "owner_id": "074916853051",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc-private-us-east-1b",
              "Terraform": "true",
              "project": "youtube-DE"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc-private-us-east-1b",
              "Terraform": "true",
              "project": "youtube-DE"
            },
            "timeouts": null,
            "vpc_id": "vpc-006b1d55247396fec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074916853051:route-table/rtb-0054fe2591a3b72bb",
            "id": "rtb-0054fe2591a3b72bb",
            "owner_id": "074916853051",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02bd002eb57567c28",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc-public",
              "Terraform": "true",
              "project": "youtube-DE"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc-public",
              "Terraform": "true",
              "project": "youtube-DE"
            },
            "timeouts": null,
            "vpc_id": "vpc-006b1d55247396fec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d2408f9db296aa0",
            "route_table_id": "rtb-0987276a78d19bca7",
            "subnet_id": "subnet-015b4745f4c1321f4"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011290a235e9b620c",
            "route_table_id": "rtb-0513568e4e076a57f",
            "subnet_id": "subnet-0f93879e1c88ea59a"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdd6bae1cc771bc3",
            "route_table_id": "rtb-0054fe2591a3b72bb",
            "subnet_id": "subnet-0ce9afd629314f733"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007004c97f41776aa",
            "route_table_id": "rtb-0054fe2591a3b72bb",
            "subnet_id": "subnet-00e4e5056d1e16b9e"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074916853051:subnet/subnet-015b4745f4c1321f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015b4745f4c1321f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "074916853051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc-private-us-east-1a",
              "Terraform": "true",
              "project": "youtube-DE"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc-private-us-east-1a",
              "Terraform": "true",
              "project": "youtube-DE"
            },
            "vpc_id": "vpc-006b1d55247396fec"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074916853051:subnet/subnet-0f93879e1c88ea59a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f93879e1c88ea59a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "074916853051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc-private-us-east-1b",
              "Terraform": "true",
              "project": "youtube-DE"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc-private-us-east-1b",
              "Terraform": "true",
              "project": "youtube-DE"
            },
            "vpc_id": "vpc-006b1d55247396fec"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074916853051:subnet/subnet-0ce9afd629314f733",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce9afd629314f733",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "074916853051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc-public-us-east-1a",
              "Terraform": "true",
              "project": "youtube-DE"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc-public-us-east-1a",
              "Terraform": "true",
              "project": "youtube-DE"
            },
            "vpc_id": "vpc-006b1d55247396fec"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074916853051:subnet/subnet-00e4e5056d1e16b9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e4e5056d1e16b9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "074916853051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc-public-us-east-1b",
              "Terraform": "true",
              "project": "youtube-DE"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc-public-us-east-1b",
              "Terraform": "true",
              "project": "youtube-DE"
            },
            "vpc_id": "vpc-006b1d55247396fec"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074916853051:vpc/vpc-006b1d55247396fec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-013afdfd24a348491",
            "default_route_table_id": "rtb-0564ae0e07efc27c1",
            "default_security_group_id": "sg-095526dd2191afd0c",
            "dhcp_options_id": "dopt-0612764e1d46953a0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-006b1d55247396fec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0564ae0e07efc27c1",
            "owner_id": "074916853051",
            "tags": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc",
              "Terraform": "true",
              "project": "youtube-DE"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "youtube-DE-vpc",
              "Terraform": "true",
              "project": "youtube-DE"
            }
          }
        }
      ]
    }
  ]
}